--- a/style5.css
+++ b/style5.css
@@ -6,6 +6,12 @@ body {
     box-sizing: border-box;
 }
 
+h3{
+    text-transform: capitalize;
+    color: chocolate;
+    
+}
+
 .container {
     width: 80%;
     margin: 0 auto;
